...
                        <constraint firstAttribute="height" constant="31.5" id="SnO-6s-4uX"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="boldSystem" pointSize="26"/>
                    <color key="textColor" red="0.40392160420000001" green="0.2235293984" blue="0.231372565" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                </label>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Your email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ef3-PT-l2g" customClass="CustomTextField" customModule="Pet_project" customModuleProvider="target">
                    <rect key="frame" x="25" y="359.66666666666669" width="378" height="44"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="UYM-kk-tb0"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                        <userDefinedRuntimeAttribute type="number" keyPath="paddingAfterImage">
                            <real key="value" value="10"/>
                        </userDefinedRuntimeAttribute>
                        <userDefinedRuntimeAttribute type="boolean" keyPath="isNeedCornerRadius" value="YES"/>
                    </userDefinedRuntimeAttributes>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Your password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fIb-YQ-pN7" customClass="CustomTextField" customModule="Pet_project" customModuleProvider="target">
                    <rect key="frame" x="25" y="419.66666666666669" width="378" height="44"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="KcM-u7-2bK"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                    <color key="backgroundColor" red="0.40392160420000001" green="0.2235293984" blue="0.231372565" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="Huo-Q3-WhC"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <state key="normal" title="LOGIN"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                            <integer key="value" value="20"/>
                        </userDefinedRuntimeAttribute>
                    </userDefinedRuntimeAttributes>
                    <connections>
...
